add filter with ai with openai + qwen3. refactor api with interface/service and DI
